[package]
name = "pap"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tempfile = "3"
toml = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.9"
walkdir = "2"
strsim = "0.10"
term_size = "0.3"
chrono = "0.4"
